--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,8 @@
       display: flex;
       align-items: center;
       color: white;
-     /* justify-content: space-evenly; */
+      justify-content: space-evenly; 
+
 }
 
 .logo{
@@ -26,17 +27,21 @@
 .logo-image{
       width: 50px;
       height: 50px;
-      margin-left: 10px;
 }
 
 #loc{     
       margin-right: 3px;
 }
 
+.loc{
+      width: 90px;
+}
+
 .loc1{
       margin-left: 15px;
       color: gray;
       margin-right: 10px;
+      font-size: small;
 }
 .loc2{
       display: flex;
@@ -88,16 +93,15 @@
 .nav-search {
       display: flex;
       height: 40px;
-      width: 800px;
+      width: 900px;
       align-items: center;
-      justify-content: space-between;
+      justify-content: space-evenly;
   }
 
   .lang{
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-left: 10px;
       color: white;
       margin-top: 10px;
   }
@@ -105,4 +109,37 @@
   #lang1{
       margin-left: 5px;
       color: gray;
+  }
+
+  .sign-in{
+      align-items: center;
+      height: 50px;
+      width: 150px;
+      align-content: center;
+  }
+
+  .sign-in-line1{
+      margin-left: 8px;
+      font-size: small;
+  }
+
+  .sign-in-line2{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 150px;
+      color: white;
+  }
+
+  #return{
+      width: 80px;
+  }
+
+  #return-line1{
+      font-size: small;
+  }
+
+  #cart{
+      width: 100px;
+      display: flex;
   }
