--- a/stylesheet.css
+++ b/stylesheet.css
@@ -161,6 +161,7 @@
     height: 50px;
     align-items: center;
     justify-content: center;
+    margin-right: 5px;
 }
 
 .nav-panel{
@@ -187,4 +188,54 @@
 
 .nav-panel-1 i{
     margin-right: 4px;
+}
+
+.main-image{
+    background-image: url('/images/main.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 500px;
+    width: 100%;
+}
+
+
+.main{
+    position: relative;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.content{
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    width: 95%;
+    background-color: white;
+    position: absolute;
+    top: 210px;
+}
+
+.content-warning{
+    display: flex;
+}
+
+.content-items{
+    position: absolute;
+    top: 70px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 200px 200px;
+    gap: 1px 1px;
+    grid-auto-flow: column;
+}
+
+.content-items-box{
+    background-color: white;
+    padding: 20px;
+
+}
+
+#content-items-title{
+    font-size: large;
 }
