--- a/stylesheet.css
+++ b/stylesheet.css
@@ -190,6 +190,13 @@
     margin-right: 4px;
 }
 
+.main{
+    position: relative;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
 .main-image{
     background-image: url('/images/main.jpg');
     background-size: cover;
@@ -200,18 +207,11 @@
 }
 
 
-.main{
-    position: relative;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-}
-
 .content{
     display: flex;
     padding: 10px;
     justify-content: center;
-    width: 95%;
+    width: 96.5%;
     background-color: white;
     position: absolute;
     top: 210px;
@@ -221,18 +221,42 @@
     display: flex;
 }
 
-.content-items{
-    position: absolute;
-    top: 70px;
-    height: 200px;
-    background-color: white;
+.content-items1{
     display: flex;
+    justify-content: space-evenly;
+}
+
+.content-items2{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.content-1{
+    background-color: #e2e7e6;
+    position: absolute;
+    width: 100%;
+    top: 260px;
 }
 
 .items-box{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    height: 400px;
+    width: 23%;
+    background-color: white;
+    padding: 20px 0px 15px;
+}
+
+.box-image{
+    height: 300px;
     width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.box-content{
+    margin-left: 10px;
+    margin-right: 10px;
 }
