--- a/stylesheet.css
+++ b/stylesheet.css
@@ -191,18 +191,16 @@
 }
 
 .main{
-    position: relative;
-    display: flex;
     align-content: center;
     justify-content: center;
 }
 
 .main-image{
-    background-image: url('/images/main.jpg');
+    background-image: url('/images/banner.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 500px;
+    height: 600px;
     width: 100%;
 }
 
@@ -214,7 +212,7 @@
     width: 96.5%;
     background-color: white;
     position: absolute;
-    top: 210px;
+    top: 350px;
 }
 
 .content-warning{
@@ -237,7 +235,7 @@
     background-color: #e2e7e6;
     position: absolute;
     width: 100%;
-    top: 260px;
+    top: 460px;
 }
 
 .items-box{
