--- a/stylesheet.css
+++ b/stylesheet.css
@@ -198,25 +198,29 @@
 .main-image{
     background-image: url('/images/banner.jpg');
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 600px;
-    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
-
+/*
 .content{
     display: flex;
-    padding: 10px;
     justify-content: center;
-    width: 96.5%;
-    background-color: white;
-    position: absolute;
-    top: 350px;
-}
+} */
 
 .content-warning{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 96.5%;
+    background-color: white;
+    color: black;
+    font-size: 14px;
+    width: 96%;
+    margin-bottom: 25px;
 }
 
 .content-items1{
@@ -228,14 +232,13 @@
     display: flex;
     justify-content: space-evenly;
     margin-top: 20px;
-    margin-bottom: 20px;
 }
 
-.content-1{
+.content{
     background-color: #e2e7e6;
-    position: absolute;
     width: 100%;
-    top: 460px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .items-box{
@@ -257,4 +260,92 @@
 .box-content{
     margin-left: 10px;
     margin-right: 10px;
+}
+
+.back-to-top{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    background-color: #37475a;
+    color: white;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+    width: 100%;
+    background-color: #222F3D;
+    color: white;
+}
+
+.footer-content{
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
+}
+
+.footer-content p{
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.footer-content a{
+    display: block;
+    color: #dddddd;
+    margin-bottom: 5px;
+}
+
+.footer2{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 80px;
+    width: 100%;
+    background-color: #37475a;
+    color: white;
+    border-top: 0.5px solid white;
+}
+
+.footer-logo{
+    background-image: url('/images/logo.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 50px;
+    width: 100px;
+}
+
+.footer3{
+    background-color: #222F3D;
+    color: white;
+    height: 65px;
+    width: 100%;
+}
+
+.footer3-line1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+    margin-bottom: 5px;
+    font-size: 12px;
+}
+
+.footer3-line1 p{
+    margin-right: 20px;
+}
+
+.footer3-line2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+    font-size: 12px;
 }
